Dependabot/npm and yarn/frontend/npm and yarn 459f987eb5 (#8)
* Add files via upload

* Update and rename Dist/Index.html 2.html to Index.html

* Rename index.html to Dist/index.html

* Create azure-container-webapp.yml

* Delete Index.html

* Rename Dist/index.html to index.html

* Add files via upload

* Update index.html

* Rename Dist/Setup.py to Setup.py

* Rename Dist/function.js to function.js

* Create refactor.html

* Update index.html

* Create analyze.html

* Create docgen.html

* Create format.html

* Create unittests.html

* Create commenting.html

* Update index.html

* Update refactor.html

* Rename refactor.html to refactor.html

* Update analyze.html

* Rename analyze.html to analyze.html

* Update and rename docgen.html to docgen.html

* Update and rename format.html to format.html

* Update and rename unittests.html to unittests.html

* Update and rename commenting.html to commenting.html

* Update Index.html

* Update refactor.html

* Update analyze.html

* Update docgen.html

* Update format.html

* Update commenting.html

* Update unittests.html

* Update refactor.html

* Update refactor.html

* Rename analyze.html to analyze.html

* Delete .env.local

* Update .env

* Update commenting.html

* Update unittests.html

* Update format.html

* Update docgen.html

* Update analyze.html

* Update Index.html

* Delete .github/workflows/azure-container-webapp.yml

* Delete .github/workflows/static.yml

* Create python-app.yml

* Delete .github/workflows/jekyll-gh-pages.yml

* Create static.yml

* Add files via upload

* Add files via upload

* Update requirements.txt

* Update requirements.txt

* Update homebrew.sh

* Add files via upload

* Delete docgen.html

* Delete format.html

* Delete analyze.html

* Delete commenting.html

* Delete unittests.html

* Delete Page directory

* Delete Dist/src

* Create CNAME

* Update homebrew.sh

* Update and rename main.py to .env.py

* Create main.py

* Create web4ai

* Create config.nginx

* Update homebrew.s

--- a/index.html
+++ b/index.html
@@ -1,111 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Web4 AI Project Assistant</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-  <script src="https://unpkg.com/localforage/dist/localforage.min.js"></script>
-  <script src="https://mlc.ai/web-llm/dist/index.js"></script>
+  <style>
+    body {
+      background-color: #36393f;
+      color: #dcddde;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      height: 100vh;
+      overflow: hidden;
+    }
+    #sidebar {
+      background-color: #2f3136;
+      width: 220px;
+      display: flex;
+      flex-direction: column;
+      padding: 1rem;
+    }
+    #sidebar h2 {
+      color: #ffffff;
+      font-weight: 700;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+    }
+    .button {
+      background-color: #5865f2;
+      border-radius: 8px;
+      color: white;
+      padding: 10px 15px;
+      margin-bottom: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      transition: background-color 0.2s ease;
+    }
+    .button:hover {
+      background-color: #4752c4;
+    }
+    #mainContent {
+      flex-grow: 1;
+      background-color: #40444b;
+      padding: 2rem;
+      overflow-y: auto;
+    }
+    #fileList, #analysisOutput {
+      background: #2f3136;
+      padding: 10px;
+      border-radius: 8px;
+    }
+    #searchBox, #modelSelector {
+      margin-top: 1rem;
+      background-color: #2f3136;
+      border: none;
+      color: #dcddde;
+      padding: 8px;
+      border-radius: 6px;
+      font-size: 1rem;
+      width: 100%;
+    }
+    #dropZone {
+      margin-top: 1rem;
+      background-color: #2f3136;
+      border: 2px dashed #5865f2;
+      border-radius: 8px;
+      padding: 20px;
+      text-align: center;
+    }
+    pre {
+      white-space: pre-wrap;
+      font-size: 0.95rem;
+    }
+  </style>
 </head>
 <body>
+  <nav id="sidebar">
+    <h2>Web4 AI Tools</h2>
+    <a href="refactor.html" class="button">AI Refactor</a>
+    <a href="analyze.html" class="button">Analyze Code</a>
+    <a href="docgen.html" class="button">Generate Docs</a>
+    <a href="format.html" class="button">Format Code</a>
+    <a href="unittests.html" class="button">Generate Unit Tests</a>
+    <a href="commenting.html" class="button">Add Comments</a>
 
-  <header>
-    <h1>Web4 AI Project Assistant</h1>
-  </header>
+    <label for="modelSelector">Select AI Model</label>
+    <select id="modelSelector">
+      <option value="llama2-7b-chat.ggmlv3.q4_0.bin">LLaMA 2 7B Chat</option>
+      <option value="gpt4all-lora.bin">GPT4All LoRA</option>
+      <option value="wizard-vicuna-13b.bin">Wizard Vicuna 13B</option>
+      <option value="ggml-alpaca-7b-q4.bin">Alpaca 7B Q4</option>
+    </select>
+    <input type="text" id="searchBox" placeholder="🔍 Search files..." />
+    <button class="button" onclick="toggleSidebar()">Toggle Sidebar</button>
+    <label><input type="checkbox" id="themeToggle" /> Dark Mode</label>
+  </nav>
 
-  <!-- File Management Section -->
-  <section id="fileManagement">
-    <h2>File Management</h2>
-    <input type="file" id="fileInput" multiple />
-    <button onclick="loadFiles()">Load Files</button>
-    <button onclick="downloadAll()">Download Project</button>
-  </section>
+  <main id="mainContent">
+    <h1>Welcome to Web4 AI Project Assistant</h1>
+    <p>Load your files below or drag them into the zone. Then navigate to a tool!</p>
+    <input type="file" id="fileInput" multiple webkitdirectory directory />
+    <button class="button" onclick="loadFiles()">📂 Load Files</button>
+    <div id="dropZone"><strong>Drop files here</strong></div>
+    <h3>Loaded Files:</h3>
+    <ul id="fileList" style="max-height: 300px; overflow-y: auto;"></ul>
 
-  <hr>
+    <button class="button" onclick="startVoiceCommand()">🎙️ Voice Command</button>
+    <button class="button" onclick="generateCommitMessage()">📝 Generate Commit Message</button>
+    <p id="commitMsg"></p>
 
-  <!-- AI Operations Section -->
-  <section id="aiOperations">
-    <h2>AI Options</h2>
-    <label>
-      <input type="checkbox" id="toggleOnlineAI" checked> Use Online GPT-4
-    </label>
-    <div>
-      <button onclick="runAIRefactor()">Run AI Refactor</button>
-      <button onclick="runAnalysis()">Analyze Code</button>
-      <button onclick="runDocGen()">Generate Documentation</button>
-      <button onclick="runFormat()">Format Code</button>
-      <button onclick="runUnitTests()">Generate Unit Tests</button>
-      <button onclick="runCommenting()">Add Code Comments</button>
+    <div id="aiOutput">
+      <h3>AI Output Preview</h3>
+      <pre id="outputText"></pre>
     </div>
-  </section>
 
-  <hr>
+    <div id="analysisPanel">
+      <h3>AI Code Analysis</h3>
+      <pre id="analysisOutput"></pre>
+    </div>
+  </main>
 
-  <!-- Local Storage Section -->
-  <section id="localStorage">
-    <h2>Local Storage</h2>
-    <button onclick="saveToLocal()">Save to Local Storage</button>
-    <button onclick="loadFromLocal()">Load from Local Storage</button>
-  </section>
+  <script>
+    const fileInput = document.getElementById('fileInput');
+    const fileList = document.getElementById('fileList');
+    let loadedFiles = [];
 
-  <hr>
-  <!-- Output Section -->
-  <section id="outputSection">
-    <div id="output"></div>
-  </section>
+    function loadFiles() {
+      loadedFiles = Array.from(fileInput.files);
+      updateFileList();
+      alert(`${loadedFiles.length} files loaded successfully!`);
+    }
 
-  <script src="assistance.js"></script>
+    function updateFileList(filter = '') {
+      fileList.innerHTML = '';
+      const matches = loadedFiles.filter(file => file.name.toLowerCase().includes(filter.toLowerCase()));
+      matches.forEach(file => {
+        const li = document.createElement('li');
+        li.textContent = file.name;
+        fileList.appendChild(li);
+      });
+      if (matches.length === 0) {
+        fileList.innerHTML = '<li>No match found.</li>';
+      }
+    }
+
+    const dropZone = document.getElementById('dropZone');
+    dropZone.addEventListener('dragover', e => e.preventDefault());
+    dropZone.addEventListener('drop', e => {
+      e.preventDefault();
+      const droppedFiles = Array.from(e.dataTransfer.files);
+      loadedFiles.push(...droppedFiles);
+      updateFileList();
+      alert(`${droppedFiles.length} files added via drag-and-drop!`);
+    });
+
+    document.getElementById('searchBox').addEventListener('input', e => {
+      updateFileList(e.target.value);
+    });
+
+    const modelSelector = document.getElementById('modelSelector');
+    modelSelector.value = localStorage.getItem('selectedModel') || modelSelector.value;
+    modelSelector.addEventListener('change', () => {
+      localStorage.setItem('selectedModel', modelSelector.value);
+      alert(`AI Model set to: ${modelSelector.options[modelSelector.selectedIndex].text}`);
+    });
+
+    function toggleSidebar() {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.style.display = sidebar.style.display === 'none' ? 'flex' : 'none';
+    }
+
+    document.getElementById('themeToggle').addEventListener('change', e => {
+      document.body.style.backgroundColor = e.target.checked ? '#36393f' : '#f4f4f4';
+      document.body.style.color = e.target.checked ? '#dcddde' : '#333';
+    });
+
+    function startVoiceCommand() {
+      const recognition = new(window.SpeechRecognition || window.webkitSpeechRecognition)();
+      recognition.lang = 'en-US';
+      recognition.onresult = event => {
+        const command = event.results[0][0].transcript.toLowerCase();
+        alert(`You said: ${command}`);
+        if (command.includes("generate docs")) window.location.href = "docgen.html";
+        else if (command.includes("add comments")) window.location.href = "commenting.html";
+      };
+      recognition.start();
+    }
+
+    function generateCommitMessage() {
+      const simulatedChange = "Added AI-generated comments to utils.js";
+      const messages = [
+        `chore: ${simulatedChange}`,
+        `feat: Enhance utils.js with smart annotations`,
+        `docs: Auto-commented functions in utils.js`
+      ];
+      document.getElementById('commitMsg').textContent = messages[Math.floor(Math.random() * messages.length)];
+    }
+
+    function simulateAIResponse() {
+      const sampleText = `/**\n * Calculates factorial.\n * @param {number} n - Input\n */`;
+      document.getElementById('outputText').textContent = sampleText;
+    }
+
+    function runAnalysis() {
+      const feedback = [
+        'Line 23: Use === instead of ==',
+        'Line 45: Consider refactoring for readability',
+        'Line 87: Missing JSDoc comment'
+      ];
+      document.getElementById('analysisOutput').textContent = feedback.join('\n');
+    }
+
+    simulateAIResponse();
+    runAnalysis();
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/jszip"></script>
+  <script src="https://cdn.jsdelivr.net/npm/localforage"></script>
+  <script src="path/to/webllm.js"></script>
 </body>
 </html>
-
-<div style="background-color: #2f3136; padding: 20px; border-radius: 10px; color: #dcddde; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-  <h1 style="color: #ffffff;">AI Text Analysis</h1>
-  <p>Enter your message and let the AI decode the vibes.</p>
-
-  <form id="analyze-form">
-    <textarea id="text" placeholder="Type something insightful..." 
-              style="width: 100%; height: 150px; padding: 12px; background-color: #40444b; border: none; border-radius: 8px; color: #dcddde; font-size: 14px;"></textarea><br>
-    <button type="submit" 
-            style="margin-top: 10px; padding: 10px 20px; background-color: #5865f2; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">
-      Analyze
-    </button>
-  </form>
-
-  <div id="result" style="display:none; margin-top: 20px; background-color: #36393f; padding: 15px; border-radius: 8px;">
-    <h2 style="color: #ffffff;">Analysis Result:</h2>
-    <p id="analysis" style="color: #dcddde;"></p>
-  </div>
-</div>
-
-<script>
-  document.getElementById('analyze-form').addEventListener('submit', async (e) => {
-    e.preventDefault();
-
-    const text = document.getElementById('text').value.trim();
-    if (!text) {
-      alert('Please enter some text.');
-      return;
-    }
-
-    try {
-      const response = await fetch('http://localhost:3000/api/analyze', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ text })
-      });
-
-      const data = await response.json();
-
-      if (response.ok) {
-        document.getElementById('result').style.display = 'block';
-        document.getElementById('analysis').textContent = data.analysis;
-      } else {
-        alert('AI failed to analyze your text. Try again.');
-      }
-    } catch (err) {
-      console.error(err);
-      alert('Something went wrong with the server.');
-    }
-  });
-</script>
