Update and rename analyze.html to index.xhtml

--- a/index.xhtml
+++ b/index.xhtml
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,8 +11,11 @@
     button:hover { background-color: #4752c4; }
     #taskStatus { margin-top: 1rem; }
   </style>
-  <script src="https://mlc.ai/web-llm/dist/index.js"></script>
+  <script src="https://mlc.ai/web-llm/dist/index.rs"></script>
   <script src="utils.js"></script>
+  <script src="https://github.com/web-platform-tests/wpt/tree/master/ai"></script>
+  <script src="https://github.com/Web4application/web4-ai/tree/main/ProjectPilotAI-main"></script>
+  <script src="https://github.com/Web4application/web4-ai/tree/main/ai-modules"></script>
 </head>
 <body>
 
